--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,21 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+  font-family: "Sofia Sans", sans-serif;
+  background: linear-gradient(
+    180deg,
+    rgba(245,71,71,0.215)0%,
+    rgba(43, 209, 48, 0) 100%
+  );
+  background-size: cover;
 }
+
+
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  max-width: 200px;
+  max-height: 200px;
+  width: 100%;/*100% del anchp de la img*/
+  height: 100%;/* 100% del alto e la img*/
+  object-fit: contain; /*fijamos el logo*/
+  border-radius: 10px;/* Bordes redondeados para una mejor estética */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);/* Asegura que el logo se ajuste sin recortarse */
 }
